@@ -1,3 +1,8 @@
+2005-06-03  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-i386.c (elf_i386_relocate_section): Handle zero symndx
+	for all reloc types.
+
 2005-06-02  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf64-ppc.c (add_symbol_adjust): Set sym visibility to most
